--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </header>
 
   <section class="hero">
-    <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
+    <div class="background-image" style="background-image: url(assets/img/background.jpg);"></div>
     <div class="hero-content-area">
-      <h1>Mountain Travel</h1>
-      <h3>Unmissable Adventure Tours Around The World</h3>
+      <h1>Tropical Vacation</h1>
+      <h3>Memorible Moments on the Beach</h3>
       <a href="#" class="btn">Contact Us Now</a>
     </div>
   </section>
@@ -87,7 +87,7 @@
     <p>Want to know about our upcoming mountain-related events, or come to one of our mixers? Just sign up for our mailing list. No spam from us, we promise! Except for the spam we give you to keep up your energy while you're hiking through the mountains. We have tons of that.</p>
     <hr>
     <form>
-      
+
       <input type="email" placeholder="Email">
       <a href="#" class="btn">Subscribe now</a>
     </form>
