--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="background-image" style="background-image: url(assets/img/background.jpg);"></div>
     <div class="hero-content-area">
       <h1>Tropical Vacation</h1>
-      <h3>Memorible Moments on the Beach</h3>
+      <h3>Memorable Moments on the Beach</h3>
       <a href="#" class="btn">Contact Us Now</a>
     </div>
   </section>
