--- a/index.html
+++ b/index.html
@@ -54,20 +54,16 @@
     <h3 class="title">Some of our destinations:</h3>
     <p>Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures. Here are some pictures from people who have had elevated experiences with us.</p>
     <hr>
-    
-
-    <div class="slideshow-container">
+ <div class="slideshow-container">
   <div class="mySlides1">
-    <img src="mountain1.jpg" style="width:100%">
+    <img src="assets/img/image1.jpg" style="width:100%">
   </div>
 
   <div class="mySlides1">
-    <img src="mountain2.jpg" style="width:100%">
+    <img src="assets/img/image2.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides1">
-    <img src="mountain3.jpg" style="width:100%">
-  </div>
+  
 
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
