--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <script>
     var slideIndex = [1,1];
-    var slideId = ["mySlides1", "mySlides2"]
+    var slideId = ["mySlides1"]
     showSlides(1, 0);
     showSlides(1, 1);
     
