--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mountain Travel</title>
+  <title>Tropical Travel</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,9 +35,9 @@
   <header>
     <h2><a href="#">Tropical Vacation</a></h2>
     <nav>
-      <li><a href="#">Tours</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#locations">Locations</a></li>
+      <li><a href="#">Get to Know us Better</a></li>
+      <li><a href="#">Contact Us</a></li>
     </nav>
   </header>
 
@@ -50,8 +50,8 @@
     </div>
   </section>
   
-  <section class="destinations">
-    <h3 class="title">Some of our destinations:</h3>
+  <section id="locations">
+    <h3 class="title">Some of our Locations:</h3>
     <p>Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures. Here are some pictures from people who have had elevated experiences with us.</p>
     <hr>
  <div class="slideshow-container">
