--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2><a href="#">Tropical Vacation</a></h2>
     <nav>
       <li><a href="#locations">Locations</a></li>
-      <li><a href="#">Get to Know us Better</a></li>
+      <li><a href="#">About Us</a></li>
       <li><a href="#">Contact Us</a></li>
     </nav>
   </header>
@@ -46,7 +46,7 @@
     <div class="hero-content-area">
       <h1>Tropical Vacation</h1>
       <h3>Memorable Moments on the Beach</h3>
-      <a href="#" class="btn">Contact Us Now</a>
+      <!--  <a href="#" class="btn">Contact Us Now</a> -->
     </div>
   </section>
   
