--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     var slideIndex = [1,1];
     var slideId = ["mySlides1"]
     showSlides(1, 0);
-    showSlides(1, 1);
+  
     
     function plusSlides(n, no) {
       showSlides(slideIndex[no] += n, no);
@@ -26,7 +26,7 @@
       for (i = 0; i < x.length; i++) {
          x[i].style.display = "none";  
       }
-    
+      x[slideIndex[no]-1].style.display = "block";  
     }
     </script>
 </head>
