edited the quote

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
   <section class="hero">
     <div class="background-image" style="background-image: url(assets/img/background.jpg);"></div>
     <div class="hero-content-area">
-      <h1>Tropical Vacation</h1>
-      <h3>Memorable Moments on the Beach</h3>
+      <h1>Tropicolada</h1>
+      <h4>Off in paradise, I'll sea you real soon</h4>
       <!--  <a href="#" class="btn">Contact Us Now</a> -->
     </div>
   </section>
   
   <section class="locations">
     <h3 class="title">Some of our Locations:</h3>
-    <p>Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures. Here are some pictures from people who have had elevated experiences with us.</p>
+    <p>Tired of the life? having anxiety? just come over, get a pinacolada, and relax bro.</p>
     <hr>
 
 
