--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <header>
     <h2><a href="#">Tropicolada</a></h2>
     <nav>
-      <li><a href="#locations">Locations</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="#locations">Packages</a></li>
+      <li><a href="#packages">Reviews</a></li>
+      <li><a href="#contact">Contact Us</a></li>
     </nav>
   </header>
 
@@ -119,7 +119,7 @@
     <form>
 
       <input type="email" placeholder="Email">
-      <a href="#" class="btn">Subscribe now</a>
+      <a href="mailto:frankchaabani@gmail.com" class="btn">Subscribe now</a>
     </form>
   </section>
 
