--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <h2><a href="#">Tropicolada</a></h2>
     <nav>
-      <li><a href="#locations">Locations</a></li>
+      <li><a href="#">Locations</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Contact Us</a></li>
     </nav>
@@ -26,6 +26,7 @@
     <div class="hero-content-area">
       <h1>Tropical Vacation</h1>
       <h3>Memorable Moments on the Beach</h3>
+      <a href="#" class="btn">Book Now</a>
       <!--  <a href="#" class="btn">Contact Us Now</a> -->
     </div>
   </section>
@@ -89,13 +90,14 @@
         <p>Want to experience nature's beauty without all of that annoying exercise? Take a photo tour on one of our mountain buses.</p>
       </li>
       <li>
-        <i class="fa fa-bicycle fa-4x"></i>
-        <h4>Biking Trips</h4>
+        <!-- <i class="fa fa-ship fa-4x"></i> -->
+        <i class="fa fa-life-ring fa-4x"></i>
+        <h4>Water Activities</h4>
         <p>If bicycles are more your speed, consider taking a tour through one of our mountain bike paths. We'll provide the bikes, and lunch too!</p>
       </li>
       <li>
-        <i class="fa fa-flag-checkered fa-4x"></i>
-        <h4>Racing Trips</h4>
+        <i class="fa fa-heart-o fa-4x"></i>
+        <h4>Romantic Get Away</h4>
         <p>Got a competitive spirit? Sign up for one of our mountain marathons! Try to reach the summit before anyone else.</p>
       </li>
     </ul>
