--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         <!-- <i class="fa fa-ship fa-4x"></i> -->
         <i class="fa fa-life-ring fa-4x"></i>
         <h4>Water Activities</h4>
-        <p>If bicycles are more your speed, consider taking a tour through one of our mountain bike paths. We'll provide the bikes, and lunch too!</p>
+        <p>To get out of the beating sun!</p>
       </li>
       <li>
         <i class="fa fa-heart-o fa-4x"></i>
         <h4>Romantic Get Away</h4>
-        <p>Got a competitive spirit? Sign up for one of our mountain marathons! Try to reach the summit before anyone else.</p>
+        <p>Are you a newly wed or just want to get away with someone special? Come take advantage of our beachside honeymoon package!</p>
       </li>
     </ul>
   </section>
