--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <section class="contact">
     <h3 class="title">Learn more</h3>
-    <p>Want to know about our upcoming mountain-related events, or come to one of our mixers? Just sign up for our mailing list. No spam from us, we promise! Except for the spam we give you to keep up your energy while you're hiking through the mountains. We have tons of that.</p>
+    <p>Check out about our package deals! Plan your trip within a week! </p>
     <hr>
     <form>
 
@@ -130,7 +130,7 @@
   <footer>
 
     <p>Images courtesy of <a href="http://unsplash.com/">unsplash</a>.</p>
-    <p>Why are you even reading this?! There's never anything interesting in the footer!</p>
+    <p>Piqued Your Interest? Give us a call!</p>
     <ul>
       <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
       <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
