Changed packages part

--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
   <header>
     <h2><a href="#">Tropicolada</a></h2>
     <nav>
+
       <li><a href="#">Locations</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Contact Us</a></li>
+
     </nav>
   </header>
 
   <section class="hero">
     <div class="background-image" style="background-image: url(assets/img/background.jpg);"></div>
     <div class="hero-content-area">
+
+
       <h1>Tropical Vacation</h1>
       <h3>Memorable Moments on the Beach</h3>
       <a href="#" class="btn">Book Now</a>
@@ -32,7 +36,7 @@
   
   <section class="locations">
     <h3 class="title">Some of our Locations:</h3>
-    <p>Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures. Here are some pictures from people who have had elevated experiences with us.</p>
+    <p>Tired of the life? having anxiety? just come over, get a pinacolada, and relax bro.</p>
     <hr>
 
 
@@ -62,16 +66,11 @@
         
       </div>
 
-
-  
-
-    
-
   </section>
 
   <section class="packages">
-    <h3 class="title">Tour Packages</h3>
-    <p>We offer a variety of mountaineering packages. Whether you've climbed Everest or don't even know what a mountain is, we've got the perfect vacation for you.</p>
+    <h3 class="title">Packages</h3>
+    <p>We offer a variety of tropical packages. If you're unsure to do with your time, we've got the perfect vacation plan for you!</p>
     <hr>
 
     <ul class="grid">
@@ -116,7 +115,7 @@
     <form>
 
       <input type="email" placeholder="Email">
-      <a href="#" class="btn">Subscribe now</a>
+      <a href="mailto:frankchaabani@gmail.com" class="btn">Subscribe now</a>
     </form>
   </section>
 
