--- a/index.html
+++ b/index.html
@@ -102,15 +102,14 @@
       </li>
     </ul>
   </section>
-
   <section class="testimonials">
     <h3 class="title">Testimonials from our adventurers:</h3>
     <hr>
-    <p class="quote">Wow! This tour made me realize how much I love mountains. After going on one of these tours, I can safely say that they are my favorite geographic feature, and my favorite word that starts with M.</p>
+    <p class="quote">Me and My wife Have Went on our Honeymoon In trinidad. This was an Amazing experience. We walk in to the room with rose petals on the bed, and A complimentary bottle of Champagne. The continued on to a Private Dinner on the Beach!</p>
     <p class="author">- Colt Steele</p>
-    <p class="quote">I never understood why people cared so much about mountains. But then I went on one of these tours. Now I can't understand people who <em>don't</em> care about mountains!</p>
+    <p class="quote">I have never experienced a tour as amazing as this. It started with a simple visit to a beautiful beach where the water was so clear it looked like the boats are floating! We ended off the tour in a deep hidden waterfall where we could swim, it was amazing!</p>
     <p class="author">- Elie Schoppik</p>
-    <p class="quote">If you want to understand the universe, head to the mountains. I mean, seriously. It's like, woah. You know? It's like that.</p>
+    <p class="quote">The photo tour was Beautiful, Not only did we get to enjoy the beautiful beaches, We got to enjoy the amazing views from mounts, and go to see local art which gives a true insight to the city</p>
     <p class="author">- Tim Garcia</p>
   </section>
 
