--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2><a href="#">Tropicolada</a></h2>
     <nav>
 
-      <li><a href="#">Locations</a></li>
+      <li><a href="#slideshow-container">Locations</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Contact Us</a></li>
 
