--- a/index.html
+++ b/index.html
@@ -82,23 +82,23 @@
       <li>
         <i class="fa fa-compass fa-4x"></i>
         <h4>Guided Trips</h4>
-        <p>Looking for the complete experience? Take a tour with one of our experts. They'll show you secrets that you're likely to miss otherwise.</p>
+        <p>Looking for the complete experience? Take a tour with one of our experts. They'll show you the history  of this place and tell you what made this place what is today. With a couple secret locations on the side.</p>
       </li>
       <li>
         <i class="fa fa-camera-retro fa-4x"></i>
         <h4>Photo Trips</h4>
-        <p>Want to experience nature's beauty without all of that annoying exercise? Take a photo tour on one of our mountain buses.</p>
+        <p>Take a tour to the most beautiful landscapes and beaches in the world.</p>
       </li>
       <li>
         <!-- <i class="fa fa-ship fa-4x"></i> -->
         <i class="fa fa-life-ring fa-4x"></i>
         <h4>Water Activities</h4>
-        <p>If bicycles are more your speed, consider taking a tour through one of our mountain bike paths. We'll provide the bikes, and lunch too!</p>
+        <p>We have many great activites, especially in the water. Our activites include wind surfing, scuba diving, my personal favorite is Swimming with the sharks, and many many more.</p>
       </li>
       <li>
         <i class="fa fa-heart-o fa-4x"></i>
         <h4>Romantic Get Away</h4>
-        <p>Got a competitive spirit? Sign up for one of our mountain marathons! Try to reach the summit before anyone else.</p>
+        <p>Our locations are great places for a Honeymoon! We offer many couple activities some of them being couples massages, a personal couples dinner, and dancing. Upon arriving the room is also filled with many surprises, one of them being a complimentarybottle of Champagne</p>
       </li>
     </ul>
   </section>
