text hover and color at contact part

--- a/index.html
+++ b/index.html
@@ -117,13 +117,19 @@
   </section>
 
   <section class="contact">
-    <h3 class="title">Learn more</h3>
+    <div class = "tooltip">
+        <h3 class="title">Learn more</h3> 
+        <span class ="tooltiptext">Don't wait!!!</span>
+    </div>
     <p>Check out about our package deals! Plan your trip within a week! </p>
     <hr>
     <form>
 
       <input type="email" placeholder="Email">
-      <a href="#" class="btn">Subscribe now</a>
+      <div class = "tooltip">
+        <a href="#" class="btn">Subscribe now</a>
+        <span class ="tooltiptext">DO IT!!!</span>
+      </div>
     </form>
   </section>
 
