Slideshow image title rename

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
       <div class="mySlides fade">
         <div class="numbertext">3 / 4</div>
         <img src="assets/img/image3.jpg" style="width:100%">
-        <div class="text">Beach1</div>
+        <div class="text">Beach</div>
       </div>
       
       <div class="mySlides fade">
         <div class="numbertext">4 / 4</div>
         <img src="assets/img/image4.jpg" style="width:100%">
-        <div class="text">Beach2</div>
+        <div class="text">Surf</div>
       </div>
 
       
