changed book now to location

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <h1>Tropical Vacation</h1>
       <h3>Memorable Moments on the Beach</h3>
-      <a href="#" class="btn">Book Now</a>
+      <a href="#slideshow-container" class="btn">Locations</a>
     </div>
   </section>
   
@@ -41,7 +41,7 @@
 
 
 
-    <div class="slideshow-container">
+    <div class="slideshow-container" id="slideshow-container">
 
       <div class="mySlides fade">
         <div class="numbertext">1 / 4</div>
