--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="mySlides fade">
         <div class="numbertext">4 / 4</div>
         <img src="assets/img/beach2.jpg" style="width:100%">
-        <div class="text">Surf</div>
+        <div class="text">Surfing</div>
 
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
